# distributed-vae

./: .gitignore  10x_data.ipynb  Interactive - eval.py.ipynb  LICENSE  README.md  a100.py  benchmark.py  ddp_toy.py  ddp_toy.sh  environment.yml  environment_312.yml  environment_mps.yml  environment_mps_311.yml  evaluation.py  fsdp.py  fsdp.sh  fsdp_mnist.py  fsdp_mnist2.py  fsdp_mnist_srun.py  fsdp_tutorial.ipynb  fsdp_tutorial.py  gen-run-train-fsdp.sh  gen-run-train-joint.sh  gen-run-train.sh  hello.py  iperf_test.sh  latency.py  mmidas.toml  mnist.slurm  my_utils.py  notebook.ipynb  out3.txt  out4.txt  pl.py  plot.ipynb  plot.py  plot_config.py  plot_mi.ipynb  pyproject.toml  requirements.txt  (+15 more)
.lsp/.cache/: db.transit.json
data/: genes_Patchseq.csv  genes_SS_ALM-VISp.csv  tree_Mouse_cortex_2020.csv  tree_human_MTG_2023.csv
evaluation/: test.npy
mmidas/: .cpl_mixvae.py.swp  _dist_utils.py  _evals.py  _mnist.ipynb  _utils.py  cpl_mixvae.py  eval_models.py  hello.py  model.ipynb  model.py  nn_model.py  parser.py  train.py
mmidas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mmidas/augmentation/: aug_utils.py  dataloader.py  networks.py  train.py  udagan.py  utils.py
mmidas/utils/: analysis_cells_tree.py  analysis_tree_helpers.py  celltype_hierarchy.py  cluster_analysis.py  data_tools.py  dataloader.py  dend_json_to_df.py  distributions.py  local_config.py  taxonomy.py  tools.py  tree_based_analysis.py
notebooks/: 1_data_prep.ipynb  2_train.ipynb  3_evaluation.ipynb  4_clusterability.ipynb
tests/: test_evals.py  test_model.py  test_test.py  test_train.py  test_utils.py
train-scripts/: run-train-A1-E100000-a100.sh  run-train-A1-E20000-a100.sh  run-train-A1-E20000-v100.sh  run-train-A1-E50000-a100.sh  run-train-A1-E50000-v100.sh  run-train-A10-E100000-a100.sh  run-train-A10-E500000-a100.sh  run-train-A10-E500000-v100.sh  run-train-A10-a100.sh  run-train-A10-v100.sh  run-train-A15-E100000-a100.sh  run-train-A15-E500000-a100.sh  run-train-A15-E500000-any.sh  run-train-A15-E500000-v100.sh  run-train-A15-a100.sh  run-train-A15-v100.sh  run-train-A2-E100000-a100.sh  run-train-A2-E100000-v100.sh  run-train-A2-E50000-a100.sh  run-train-A2-E500000-a100.sh  run-train-A2-E500000-v100.sh  run-train-A2-a100.sh  run-train-A2-v100.sh  run-train-A3-E100000-a100.sh  run-train-A3-E100000-v100.sh  run-train-A3-E50000-a100.sh  run-train-A3-E500000-a100.sh  run-train-A3-E500000-v100.sh  run-train-A3-a100.sh  run-train-A3-v100.sh  run-train-A5-E100000-a100.sh  run-train-A5-E200000-a100.sh  run-train-A5-E500000-a100.sh  run-train-A5-E500000-v100.sh  run-train-A5-a100.sh  run-train-A5-v100.sh  run-train-A7-E100000-a100.sh  run-train-A7-E500000-a100.sh  run-train-A7-E500000-v100.sh  run-train-A7-a100.sh  (+19 more)
tutorials/: fsdp.py  min_fsdp.py  train_10x.py  train_AD.py  train_patchseq.py  train_smartseq.py
tutorials/train_augmenter/: test_augmenter.py  train_AD.py  train_facs.py
utils/: utils.py
