# -----------------------------------------------------------------------------
[project]
name = "mmidas"
description = "Couple Mixture VAE models for single cell data"
version = "0.1.0"
requires-python = ">= 3.8"
#requires-pytorch = ">= 2.0"

authors = [
  {name = "Yeganeh Marghi", email = "yeganeh.marghi@alleninstitute.org"},
  {name = "Rohan Gala", email = "rohang@alleninstitute.org"}
]

readme = "README.md"

# -----------------------------------------------------------------------------
[paths]
main_dir = "./"

# -----------------------------------------------------------------------------
[mouse_smartseq]
anndata_file = "Mouse_ALM-VISp_cpm.h5ad"
htree_file = "tree_Mouse_ALM-VISp_2018.csv"
ref_gene_file = "genes_SS_ALM-VISp.csv"
data_path = "data/"
saving_path = "results/mouse_smartseq/"
aug_model = "smartseq_augmenter/trained_augmenter_bs_1000_dn_50_dz_10_l1_1.0_l2_0.5_l3_0.1_l4_0.50"
trained_model = "run_1_K_120_Sdim_2_aug_True_lr_0.001_n_arm_2_nbatch_5000_nepoch_10000_nepochP_1000"

# -----------------------------------------------------------------------------
[mouse_ctx_10x]
anndata_file = ""
htree_file = "tree_Mouse_cortex_2020.csv"
data_path = "data/mouse_ctx_10x/"
saving_path = "results/mouse_ctx_10x/"
aug_model = ""
trained_model = ""

# -----------------------------------------------------------------------------
[SEA-AD]
anndata_file = ""
htree_file = "tree_human_MTG_2023.csv"
data_path = "data/human_AD/"
saving_path = "results/human_AD/"
aug_model = ""
trained_model = ""







