[project]
name = "distributed-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.10.9",
    "expecttest>=0.2.1",
    "ipykernel>=6.29.5",
    "jax[cuda12]>=0.4.33",
    "notebook>=7.1.3",
    "plotly>=5.24.1",
    "pytest>=8.3.3",
    "requests==2.28.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "tqdm==4.64.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./mmidas"]
